Fix markdown number visibility

--- a/src/style.css
+++ b/src/style.css
@@ -2761,9 +2761,12 @@ body {
 .mdx h3 {
   font-size: 1.0625em;
 }
-.mdx ul,
-.mdx ol {
+.mdx ul {
   padding-left: 1.25rem;
+  margin: 0.6rem 0;
+}
+.mdx ol {
+  padding-left: 2.25rem;
   margin: 0.6rem 0;
 }
 .mdx code {
